[tool.poetry]
name = "clr_finder"
version = "0.1.0"
description = "Pytorch implementations of learning rate finder and cyclic scheduler."
authors = ["Valentin Evseenko <roninfromsvf@gmail.com>"]
license = "MIT"
readme = "README.md

[tool.poetry.dependencies]
python = "^3.6"
torch = "^1.5.0"
torchvision = "^0.6.0"
numpy = "^1.18.5"
matplotlib = "^3.2.1"
tqdm = "^4.46.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
